    MYSQL_OPT_LOCAL_INFILE) (Andrey)

- PDO OCI driver:
  . Fixed bug #55768 (PDO_OCI can't resume Oracle session after it's been killed)
  (mikhail dot v dot gavrilov at gmail dot com, Chris Jones, Tony)

- Phar:
  . Fixed bug #52013 (Unable to decompress files in a compressed phar). (Hannes)
  . Fixed bug #53872 (internal corruption of phar). (Hannes)

- PHP-FPM SAPI:
  . Fixed bug #55533 (The -d parameter doesn't work). (fat)
  . Implemented FR #52569 (Add the "ondemand" process-manager
    to allow zero children). (fat)
  . Fixed bug #55486 (status show BIG processes number). (fat)
  . Fixed bug #55577 (status.html does not install). (fat)
  . Backported from 5.4 branch (Dropped restriction of not setting the same
    value multiple times, the last one holds).
    (giovanni at giacobbi dot net, fat)
  . Backported FR #55166 from 5.4 branch (Added process.max to control
    the number of process FPM can fork). (fat)
  . Backported FR #55181 from 5.4 branch (Enhance security by limiting access
    to user defined extensions). (fat)
  . Backported FR #54098 from 5.4 branch (Lowered process manager
    default value). (fat)
  . Backported FR #52052 from 5.4 branch (Added partial syslog support). (fat)
  . Implemented FR #54577 (Enhanced status page with full status and details
    about each processes. Also provide a web page (status.html) for
    real-time FPM status. (fat)

- Session:
  . Fixed bug #55267 (session_regenerate_id fails after header sent). (Hannes)

- NSAPI SAPI:
  . Don't set $_SERVER['HTTPS'] on unsecure connection (bug #55403). (Uwe
    Schindler)

- SimpleXML:
  . Reverted the SimpleXML->query() behaviour to returning empty arrays
    instead of false when no nodes are found as it was since 5.3.3 
    (bug #48601). (chregu, rrichards)
    
- String:
  . Fixed bug #55674 (fgetcsv & str_getcsv skip empty fields in some tab-separated 
    records). (Laruence)

- SPL:
  . Fixed bug #55807 (Wrong value for splFileObject::SKIP_EMPTY).