@@ -75,6 +75,7 @@ PHP                                                                        NEWS
   . Fixed bug #53872 (internal corruption of phar). (Hannes)
 
 - PHP-FPM SAPI:
+  . Fixed bug #55526 (Heartbeat causes a lot of unnecessary events). (fat)
   . Fixed bug #55533 (The -d parameter doesn't work). (fat)
   . Implemented FR #52569 (Add the "ondemand" process-manager
     to allow zero children). (fat)
